# lapq-ecc

./: .gitignore  PHASES_567_COMPLETE.md  README.md  circuit.py  client.py  ecdlp_full_circuit.qreg  ecdlp_secp256k1_fixed.qreg  examples.py  execute_fixed_qpu1.py  execute_qpu1.py  final_qpu1_report.py  final_qpu1_test.py  fix_qreg_format.py  fix_qreg_syntax.py  fix_qreg_syntax_v2.py  parse_measurement.py  pyproject.toml  qpu1_adder_4bit.qreg  qpu1_adder_4bit_fixed.qreg  qpu1_execution_report.txt  qpu1_qft_6qubit.qreg  qpu1_qft_6qubit_fixed.qreg  test_phases_567.py  test_qpu1_direct.py  test_qpu1_native.py  test_qpu1_verification.py  update_quantum_core.py
docs/: 00_README.md  01_mathematical_foundations.md  02_architecture_overview.md  03_finite_field_arithmetic.md  04_ec_point_operations.md  05_shors_algorithm_circuit.md  06_windowed_arithmetic.md  07_reversible_computation.md  08_qubit_budget.md  09_gate_count_analysis.md  10_error_correction.md  11_classical_processing.md  12_correctness_argument.md  13_implementation_roadmap.md  14_api_reference.md  15_glossary_references.md
ecdlp_solver/: __init__.py
ecdlp_solver/classical/: curve.py  field.py  postprocess.py  tables.py
ecdlp_solver/error_correction/: surface_code.py
ecdlp_solver/quantum/: core.py  reversible.py
ecdlp_solver/quantum/arithmetic/: mod_add.py  mod_mul.py  mod_reduce.py  mod_sub.py
ecdlp_solver/quantum/ec/: ctrl_point_add.py  point_add.py  point_double.py  point_negate.py
ecdlp_solver/quantum/memory/: qrom.py  (+1 more)
ecdlp_solver/verification/: depth_analyzer.py  gate_counter.py  qubit_counter.py
lapq/: __init__.py  algorithms.py  gates.py  models.py
(+8 files in other folders)
